# g4music-discord-rpc

./: README.md  methods.txt  pyproject.toml  requirements.txt
src/: config.py  main.py
